Revision history for perl distribution Convos

4.19 Not Released
 - Fixed cpanfile for Text::Markdown

4.18 2020-06-05T13:37:00+0900
 - New login and fallback page design that matches https://convos.chat
 - Fix <SelectField> click and filter issues
 - Fix reverse proxy detection for the first user
 - Perldoc rendering must be enabled with CONVOS_CMS_PERLDOC=1
 - Will scan for new blogs every 15 seconds

4.17 2020-06-03T10:35:00+0900
 - Fix absolute URL to social image from CMS
 - Fix not setting X-Provider-Name in CMS mode
 - Fix API links in POD
 - Fix "redirect_to" for CMS
 - Add TOC to cms pages and perldoc
 - Add shortcut for FontAwesome icon inside markdown
 - Can automatically pull description from the first paragraph
 - Reduce docker image size #492
 - Improved login screen design
 - Improved rendering of perldoc
 - Improved support for markdown inside tags
 - Replaced Text::MultiMarkdown with Text::Markdown since it is easier to install

4.16 2020-06-01T22:16:00+0900
 - Cannot load Module::Install directly

4.15 2020-06-01T22:07:00+0900
 - Add missing dependency

4.14 2020-06-01T21:56:00+0900
 - Add CMS functionality
 - Fixed highlight color for dark themes

4.13 2020-05-31T10:04:00+0900
 - Add light variant of "Nord" theme #476
   Contributor: Thibault Duponchelle
 - Add "Hacker" theme #479
   Contributor: Thibault Duponchelle
 - Add support for "OPER" command
 - Fix "Color scheme" dropdown reflect the options from the theme #482
   Contributor: Thibault Duponchelle
 - Fix "Notifications keywords" text field value has new value after saving
   user account #485 #486
 - Fix description in site.webmanifest.ep
 - Fix font awesome cache issue
 - Fix toggling message details
 - Fix not making pictures from https://convos.chat gargantic
 - Changed "/raw" to "/quote"
 - Changed to always sending "/quote" messages from connection conversation

4.12 2020-05-25T10:04:00+0900
 - Fix unread count styling on small screens

4.11 2020-05-25T09:55:00+0900