@@ -90,7 +90,3 @@ th {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
-
-.small {
-  font-size: 0.9rem;
-}
