@@ -1,7 +1,9 @@
 Revision history for perl distribution Convos
 
 4.19 Not Released
- - Fixed cpanfile for Text::Markdown
+ - Fix login/cms footer and header on small screens
+ - Fix cpanfile for Text::Markdown
+ - Bumped JSON::Validator and Mojolicious::Plugin::OpenAPI dependencies
 
 4.18 2020-06-05T13:37:00+0900
  - New login and fallback page design that matches https://convos.chat
